# Snowflake-Cortex-Slack-Integration

./: .env.example  .gitignore  README.md  pyproject.toml
src/cortex_slack_bot/: app.py  config.py  handlers.py  snowflake_client.py
tests/: conftest.py  test_handlers.py  test_snowflake_client.py
